--- a/templates/base.html
+++ b/templates/base.html
@@ -133,9 +133,9 @@
             </div>
         </div>
         <!--main navbar-->
-        <div class="row main-nav d-lg-none">
+        <div class="row main-nav d-lg-none p-0">
             <div class="col">
-                <nav class="navbar navbar-expand-lg">
+                <nav class="navbar navbar-expand-lg pb-0">
                     <div class="container-fluid">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
