--- a/static/css/base.css
+++ b/static/css/base.css
@@ -665,20 +665,21 @@ footer {
     flex-shrink: 0;
 }
 
-.footer-links {
+/* .footer-links {
     width: 100%;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
     margin-bottom: 0px;
-}
+    text-transform: capitalize;
+} */
 
 .footer-links li,
 .footer-links a {
     color: #fafafa;
     display: inline-block;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    /* padding-left: 0.5rem;
+    padding-right: 0.5rem; */
     text-decoration: none;
     text-align: center;
 }
