--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,17 +1,22 @@
 <footer class="container-fluid">
-    <div class="row">
+    <!-- <div class="row">
         <div class="col">
             <ul class="w-auto mx-auto footer-links">
-                <li>
-                    <a class="nav-link text-white" href="#">About</a>
+                <li class="nav-link">
+                    <a  href="#">About</a>
                 </li>
-                <li class="text-white">
+                <li class="text-muted">
                     Follow Us
                 </li>
-                <li>
-                    <a class="nav-link text-white" href="#">Contact</a>
+                <li class="nav-link">
+                    <a href="#">Contact</a>
                 </li>
             </ul>
+        </div>
+    </div> -->
+    <div class="row mt-1">
+        <div class="col text-center">
+            <p class="text-white">Follow Us</p>
         </div>
     </div>
     <div class="row">
@@ -19,28 +24,35 @@
             <ul class="social-icons">
                 <li>
                     <a href="https://www.facebook.com/" target="_blank" rel="noreferrer">
-                        <i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
+                        <i class="fab fa-facebook" aria-hidden="true"></i>
+                        <span class="sr-only">Facebook</span>
+                    </a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/" target="_blank" rel="noreferrer">
-                        <i class="fab fa-instagram" aria-hidden="true"></i><span
-                            class="sr-only">Instagram</span></a>
+                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                        <span class="sr-only">Instagram</span>
+                    </a>
                 </li>
                 <li>
                     <a href="https://www.pinterest.co.uk/" target="_blank" rel="noreferrer">
-                        <i class="fab fa-pinterest" aria-hidden="true"></i><span class="sr-only">Pintrest</span></a>
+                        <i class="fab fa-pinterest" aria-hidden="true"></i>
+                        <span class="sr-only">Pintrest</span>
+                    </a>
                 </li>
                 <li>
                     <a href="https://twitter.com/" target="_blank" rel="noreferrer">
-                        <i class="fab fa-twitter" aria-hidden="true"></i><span class="sr-only">Twitter</span></a>
+                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                        <span class="sr-only">Twitter</span>
+                    </a>
                 </li>
             </ul>
         </div>
     </div>
     <!--Copy Rights-->
-    <div class="row">
+    <div class="row pb-1">
         <div class="col text-center copy-rights">
-            <span class="copy-rights-text">&copy; Discover Malta 2021</span>
+            <span class="copy-rights-text">&copy; 2021 Discover Malta</span>
         </div>
     </div>
 </footer>
