--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -50,32 +50,32 @@
             </div>
         </div>
         <!--Reasons for signing up-->
-        <div class="row testimony-div">
-            <div class="card-info card-1 col-lg-2 col-md-4 col-sm-4">
+        <div class="row justify-content-center">
+            <div class="card-info card-1 col-lg-2 col-md-4 col-sm-2">
                 <div class="card-body text-center">
                     <i class="fas fa-envelope-open-text"></i>
                     <p>Instant Email Confirmation</p>
                 </div>
             </div>
-            <div class="card-info card-2 col-lg-2 col-md-4 col-sm-4">
+            <div class="card-info card-2 col-lg-2 col-md-4 col-sm-2">
                 <div class="card-body text-center">
                     <i class="fas fa-mobile-alt"></i>
                     <p>Mobile Tickets</p>
                 </div>
             </div>
-            <div class="card-info card-3 col-lg-2 col-lg-2 col-md-4 col-sm-4">
+            <div class="card-info card-3 col-lg-2 col-md-4 col-sm-2">
                 <div class="card-body text-center">
                     <i class="fas fa-file-alt"></i>
                     <p>Cancellation Policy</p>
                 </div>
             </div>
-            <div class="card-info card-4 col-lg-2 col-md-6 col-sm-4">
+            <div class="card-info card-4 col-lg-2 col-md-6 col-sm-2">
                 <div class="card-body text-center">
                     <i class="fab fa-cc-stripe"></i>
                     <p>Fast ＆ Secure Online Payments</p>
                 </div>
             </div>
-            <div class="card-info card-5 col-lg-2 col-lg-2 col-md-6 col-sm-6 offset-sm-6">
+            <div class="card-info card-5 col-lg-2 col-lg-2 col-md-6 col-sm-2">
                 <div class="card-body text-center">
                     <i class="fas fa-comment-dots"></i>
                     <p>Rate ＆ Review Your Experience</p>
@@ -102,9 +102,7 @@
         {% for category in categories %}
         <div class="col-lg-3 col-md-4 col-sm-6 p-2">
             <div class="card bg-dark h-100 m-1">
-                <a href="{{ category.get_url }}">
-                    <img src="{{ category.cat_image.url }}" class="card-img" alt="{{ category.category_name }}">
-                </a>
+                <img src="{{ category.cat_image.url }}" class="card-img" alt="{{ category.category_name }}">
                 <div class="card-img-overlay">
                     <a href="{{ category.get_url }}" class="category-link">
                         <h5 class="card-title text-center category-heading">{{ category.category_name | capfirst }}
