--- a/static/css/base.css
+++ b/static/css/base.css
@@ -237,7 +237,6 @@ a:active,
 
 .card:hover {
     box-shadow: 5px 6px 6px 2px rgba(97, 95, 95, 0.6);
-    transform: scale(1.1)
 }
 
 .card {
@@ -280,7 +279,7 @@ a:active,
 }
 
 .main-content {
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
     height: fit-content;
     flex: 1 0 auto;
 }
@@ -368,6 +367,8 @@ a:active,
 
 .pagination {
     background-color: #fafafa;
+    font-size: 1rem;
+    margin-top: 2rem;
 }
 
 .page-link {
@@ -379,7 +380,7 @@ a:active,
 }
 
 .short-description {
-    height: 12rem;
+    height: 10rem;
     overflow: auto;
     scroll-behavior: smooth;
     margin: 0px;
@@ -390,9 +391,9 @@ a:active,
 } */
 
 .card-trip {
-    height: 48rem;
+    height: 42rem;
     margin:  1rem;
-    width: 21rem;
+    /* width: 21rem; */
     border: 2px solid #000000;
 }
 
@@ -411,6 +412,7 @@ a:active,
 
 .card-trip img {
     height: 220px;
+    object-fit: cover;
 }
 
 .container {
@@ -736,6 +738,10 @@ footer {
     .container {
         max-width: 90%;
     }
+
+    .card-trip {
+        height: 45rem;
+    }
 }
 
 @media (max-width: 320px) {
@@ -805,6 +811,17 @@ footer {
         height: 20rem !important;
     }
 
+    .main-nav {
+        width: auto !important;
+    }
+
+    .card-trip {
+        margin: 0;
+        width: 270px;
+        margin-top: 2rem;
+    }
+
+
 }
 
 @media (max-width: 420px) {
@@ -830,6 +847,10 @@ footer {
     .carousel-img {
         height: 30rem;
         object-fit: cover;
+    }
+
+    .result-count {
+        font-size: 1rem;
     }
 }
 
